07Jan06=======================================================================
1. Fixed problem with the standalone 'showdx' program pointed out by Leo,
IZ5FSA.
2. Fixed rounding problem on entering spots as pointed out by Ron N5IN.
06Jan06=======================================================================
1. Fix problem with rcmd <call> sh/fdx
27Dec05=======================================================================
1. put some more flesh on the SQL stuff (which may turn out to be a bit of a
red herring as it doesn't appear to be significantly faster (for spots) than
the existing code).
21Dec05=======================================================================
1. Add start of optional SQL working.
2. Fix BadWords so that the simple word check splits words on word boundaries.
13Dec05=======================================================================
1. upissue version no to 1.52
07Nov05=======================================================================
1. Fix warnings on filtering spots where the filter was looking at US states
and there is no US state in the spot. 
2. Fix the dupes caused by having a prefix in the last characters of the 
comment.
01Nov05=======================================================================
1. add log2csv.pl for printing out logfiles
25Oct05=======================================================================
1. Incorporated the cty.dat from Jim dated today (25Oct05).
08Oct05=======================================================================
1. Reject PC11s with blank spot callsigns
01Sep05=======================================================================
1. Change the logic of propagating WWV broadcasts. Now all non-input filtered
PC23s will be sent on. Previously only the first successful new WWV was 
rebroadcast.
2. fix the problem with by_dxcc and origin_dxcc not working on WWV.
29Aug05=======================================================================